--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">理财助手</string>
+    <string name="app_name">记账助手</string>
     <string name="action_settings">Settings</string>
 
     <string name="textsizeX">12</string>
